added node to program

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/img/favicon.png" />
+    <link rel="icon" href="./img/favicon.png" />
     <link rel="stylesheet" href="/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap"
@@ -14,7 +14,7 @@
   <body>
     <header>
       <div class="logo-container">
-        <img src="/img/home.png" alt="home-icon" />
+        <img src="./img/home.png" alt="home-icon" />
         <h4 class="logotype">STUDIO GHIBLI</h4>
       </div>
       <nav>
