--- a/index.html
+++ b/index.html
@@ -14,18 +14,41 @@
   <body>
     <header>
       <div class="logo-container">
-        <img src="/img/home.png" alt="home-icon" />
+        <img src="/img/home.png" alt="home icon" />
         <h4 class="logotype">STUDIO GHIBLI</h4>
       </div>
       <nav>
         <ul class="nav-links">
-          <li><a href="#">Page 1</a></li>
-          <li><a href="#">Page 2</a></li>
-          <li><a href="#">Page 3</a></li>
-          <li><a href="#">Page 4</a></li>
-          <li><a href="#">Page 5</a></li>
+          <li><a class="nav-link" href="#">Page 1</a></li>
+          <li><a class="nav-link" href="#">Page 2</a></li>
+          <li><a class="nav-link" href="#">Page 3</a></li>
+          <li><a class="nav-link" href="#">Page 4</a></li>
+          <li><a class="nav-link" href="#">Page 5</a></li>
         </ul>
       </nav>
+      <div class="sign-in">
+        <a href="#">Sign in</a>
+      </div>
     </header>
+    <main>
+      <section class="hero-section">
+         <div class="introduction">
+             <img src="/img/totoro-1200x800.png" alt="totoro illustration">
+         </div>
+          </div>
+      </section>
+    </main>
+    <footer>
+        <div class="foot-nav">
+            <div class="copyright">
+                <p>© 2005-2020 STUDIO GHIBLI Inc.</p>
+            </div>
+            <div class="legal-links">
+                <a href="#">Privacy Policy</a>
+                <a href="#">Terms of Use</a>
+                <a href="#">How Search works</a>
+            </div>
+        </div>
+      </footer>
   </body>
 </html>
