building out nav in index and style

--- a/index.html
+++ b/index.html
@@ -13,41 +13,31 @@
   </head>
   <body>
     <header>
-      <div class="logo-container">
-        <img src="/img/home.png" alt="home icon" />
-        <h4 class="logotype">STUDIO GHIBLI</h4>
-      </div>
+      <img class="home" src="/img/home.png" alt="home logo" />
       <nav>
         <ul class="nav-links">
-          <li><a class="nav-link" href="#">Page 1</a></li>
-          <li><a class="nav-link" href="#">Page 2</a></li>
-          <li><a class="nav-link" href="#">Page 3</a></li>
-          <li><a class="nav-link" href="#">Page 4</a></li>
-          <li><a class="nav-link" href="#">Page 5</a></li>
+          <li><a href="#">Feature Films</a></li>
+          <li><a href="#">Process</a></li>
+          <li><a href="#">News</a></li>
+          <li><a href="#">Careers</a></li>
+          <li><a href="#">About</a></li>
         </ul>
       </nav>
-      <div class="sign-in">
-        <a href="#">Sign in</a>
-      </div>
+      <a href="#"><button>Sign in</button></a>
     </header>
     <main>
       <section class="hero-section">
          <div class="introduction">
-             <img src="/img/totoro-1200x800.png" alt="totoro illustration">
+             <img src="./img/totoro-1200x800.png" alt="totoro illustration">
          </div>
           </div>
       </section>
     </main>
     <footer>
         <div class="foot-nav">
-            <div class="copyright">
-                <p>© 2005-2020 STUDIO GHIBLI Inc.</p>
-            </div>
-            <div class="legal-links">
-                <a href="#">Privacy Policy</a>
-                <a href="#">Terms of Use</a>
-                <a href="#">How Search works</a>
-            </div>
+          <p>© 2005-2020 STUDIO GHIBLI Inc.</p>
+          <a href="#">Privacy Policy</a>
+          <a href="#">Terms of Use</a>
         </div>
       </footer>
   </body>
