saving changes to landing page

--- a/public/index.html
+++ b/public/index.html
@@ -4,28 +4,46 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="./img/favicon.png" />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap"
       rel="stylesheet"
     />
-    <title>Studio Ghibli</title>
+    <title> Studio Ghibli </title>
   </head>
   <body>
     <header>
       <div class="logo-container">
-        <img src="./img/home.png" alt="home-icon" />
-        <h4 class="logotype">STUDIO GHIBLI</h4>
+        <img class="home" src="./img/home.png" alt="home logo" />
+        <h4>Studio Ghibli</h4>
       </div>
       <nav>
         <ul class="nav-links">
-          <li><a href="#">Page 1</a></li>
-          <li><a href="#">Page 2</a></li>
-          <li><a href="#">Page 3</a></li>
-          <li><a href="#">Page 4</a></li>
-          <li><a href="#">Page 5</a></li>
+          <li><a href="#">Feature Films</a></li>
+          <li><a href="#">Process</a></li>
+          <li><a href="#">News</a></li>
+          <li><a href="#">Careers</a></li>
+          <li><a href="#">About</a></li>
         </ul>
       </nav>
+      <a href="#"><button>Sign in</button></a>
     </header>
+    <main>
+      <section class="hero-section">
+         <div class="introduction">
+             <img width="100%" height="auto" src="./img/totoro-1200x800.png" alt="totoro illustration">
+         </div>
+          </div>
+      </section>
+    </main>
+    <footer>
+        <div class="foot-nav">
+          <p class="copyright">© 2005-2020 STUDIO GHIBLI Inc.</p>
+          <div class="legal">
+             <a href="#">Privacy Policy</a>
+          <a href="#">Terms of Use</a>
+          </div>
+        </div>
+      </footer>
   </body>
 </html>
