added periods to link css

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="./img/favicon.png" />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap"
       rel="stylesheet"
@@ -14,13 +14,8 @@
   <body>
     <header>
       <div class="logo-container">
-<<<<<<< HEAD:index.html
-        <img class="home" src="/img/home.png" alt="home logo" />
+        <img class="home" src="./img/home.png" alt="home logo" />
         <h4>Studio Ghibli</h4>
-=======
-        <img src="./img/home.png" alt="home-icon" />
-        <h4 class="logotype">STUDIO GHIBLI</h4>
->>>>>>> master:public/index.html
       </div>
       <nav>
         <ul class="nav-links">
