started  building out the sign in modal

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap"
       rel="stylesheet"
     />
-    <title> Studio Ghibli </title>
+    <title>Studio Ghibli</title>
   </head>
   <body>
     <header>
@@ -30,20 +30,34 @@
     </header>
     <main>
       <section class="hero-section">
-         <div class="introduction">
-             <img width="100%" height="auto" src="./img/totoro-1200x800.png" alt="totoro illustration">
-         </div>
-          </div>
+        <div class="introduction">
+          <img
+            width="100%"
+            height="auto"
+            src="./img/totoro-1200x800.png"
+            alt="totoro illustration"
+          />
+        </div>
       </section>
+      <div class="modal-bg">
+        <div class="modal">
+          <h2>Sign in to Studio Ghibli</h2>
+          <label for="name">Name: </label>
+          <input type="type" name="name" />
+          <label for="email">Email: </label>
+          <input type="type" name="email" />
+          <button id="modal-btn">Placeholder</button>
+        </div>
+      </div>
     </main>
     <footer>
-        <div class="foot-nav">
-          <p class="copyright">© 2005-2020 STUDIO GHIBLI Inc.</p>
-          <div class="legal">
-             <a href="#">Privacy Policy</a>
+      <div class="foot-nav">
+        <p class="copyright">© 2005-2020 STUDIO GHIBLI Inc.</p>
+        <div class="legal">
+          <a href="#">Privacy Policy</a>
           <a href="#">Terms of Use</a>
-          </div>
         </div>
-      </footer>
+      </div>
+    </footer>
   </body>
 </html>
