--- a/public/index.html
+++ b/public/index.html
@@ -32,13 +32,14 @@
       <section class="hero-section">
         <div class="introduction">
           <img
-            width="100%"
-            height="auto"
+            id="totoro"
             src="./img/totoro-1200x800.png"
             alt="totoro illustration"
           />
         </div>
       </section>
+      <!-- modal section start -->
+      <!---
       <div class="modal-bg">
         <div class="modal">
           <h2>Sign in to Studio Ghibli</h2>
@@ -48,7 +49,8 @@
           <input type="type" name="email" />
           <button id="modal-btn">Placeholder</button>
         </div>
-      </div>
+      </div> -->
+      <!-- modal section end -->
     </main>
     <footer>
       <div class="foot-nav">
