created form.html and began building the form layout.

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <header>
       <div class="logo-container">
         <img class="home" src="./img/home.png" alt="home logo" />
-        <h4>Studio Ghibli</h4>
+        <a href="./index.html"><h4>Studio Ghibli</h4></a>
       </div>
       <nav>
         <ul class="nav-links">
@@ -26,7 +26,7 @@
           <li><a href="#">About</a></li>
         </ul>
       </nav>
-      <a href="#"><button>Sign in</button></a>
+      <a href="./form.html"><button>Sign in</button></a>
     </header>
     <main>
       <section class="hero-section">
