added some css to form.htmlm

--- a/public/form.html
+++ b/public/form.html
@@ -10,6 +10,10 @@
       rel="stylesheet"
     />
     <title>Studio Ghibli</title>
+    <script
+      src="https://kit.fontawesome.com/65f80bf624.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header>
@@ -26,7 +30,7 @@
           <li><a href="#">About</a></li>
         </ul>
       </nav>
-      <a href="./form.html"><button>Sign in</button></a>
+      <a href="./form.html"><button id="nav-button">Sign in</button></a>
     </header>
     <div class="form">
       <div class="container" id="container">
