--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
       rel="stylesheet"
     />
     <title>Studio Ghibli</title>
+    <script
+      src="https://kit.fontawesome.com/65f80bf624.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header>
