minor css tweaks to nav-button

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
           <li><a href="#">About</a></li>
         </ul>
       </nav>
-      <a href="./form.html"><button>Sign in</button></a>
+      <a href="./form.html"><button id="nav-button">Sign in</button></a>
     </header>
     <main>
       <section class="hero-section">
